--- a/project/2048/style/main.scss
+++ b/project/2048/style/main.scss
@@ -461,7 +461,7 @@ hr {
   margin-bottom: 0;
 }
 
-.restart-button {
+.run-button {
   @include button;
   display: block;
   text-align: center;
@@ -518,7 +518,7 @@ hr {
     line-height: 1.65;
   }
 
-  .restart-button {
+  .run-button {
     width: 42%;
     padding: 0;
     display: block;
